--- a/app/expansion-overview-example.html
+++ b/app/expansion-overview-example.html
@@ -66,8 +66,9 @@
 <div >
   
     <table mat-table *ngIf="Gen_flag==true"   [dataSource]="data" class="mat-elevation-z8">
+      
       <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
-        <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+        <th mat-header-cell *matHeaderCellDef> {{map_col[column]}} </th>
         <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
       </ng-container>
     
